--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>ChatCord App</title>
+    <title>Chat-It App</title>
   </head>
 
   <body>
