--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
           <div class="form-control">
             <label for="room">Room</label>
             <select name="room" id="room">
-              <option value="JavaScript">JavaScript</option>
-              <option value="Python">Python</option>
-              <option value="PHP">PHP</option>
-              <option value="C#">C#</option>
-              <option value="Ruby">Ruby</option>
-              <option value="Java">Java</option>
+              <option value="JavaScript">ComputerScience</option>
+              <option value="Python">Electronics</option>
+              <option value="PHP">Electrical</option>
+              <option value="C#">Civil</option>
+              <option value="Ruby">Mechanical</option>
+              <option value="Java">Chemical</option>
             </select>
           </div>
           <button type="submit" class="btn">Join Chat</button>
